# kaonic-android

./: README.md
kaonic-plugin/: build.gradle
kaonic-plugin/kaonic/: Cargo.toml
kaonic-plugin/kaonic/src/: android_jni.rs  event.rs  messenger.rs
